# OneEHR

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  mkdocs.toml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs-deploy.yml
docs/: ARCHITECTURE.md  PROJECT.md  datasets.md  index.md  refactoring-delta.md  tutorials.md
docs/css/: custom-theme.css
docs/getting-started/: data-model.md  index.md  installation.md  quickstart.md
docs/guide/: agent-workflows.md  analysis.md  calibration.md  core-workflows.md  eval-workflows.md  hpo.md  index.md  label-functions.md  preprocessing.md  recipes.md  splits.md  testing.md  training.md  webui.md
docs/reference/: artifacts.md  cli.md  configuration.md  datasets.md  index.md  medcode.md  models.md  positioning.md
docs/templates/: base.html
examples/: convert_tjh.py  dynamic.csv  example_events.csv  experiment.toml  external_converter_template.py  label.csv  label_fn.py  simulate_dataset.py  static.csv  tjh_los.toml  tjh_outcome.toml
examples/tjh/: convert.py  dynamic.csv  experiment.toml  experiment_los.toml  experiment_time.toml  graphcare_patient.toml  grud_patient.toml  label_los.csv  label_mortality.csv  label_mortality_time.csv  los_time.toml  mortality_patient.toml  raindrop_patient.toml  static.csv
examples/tjh_demo/: README.md  capture_screenshots.sh  prepare_data.py  run_demo.py
examples/tjh_pipeline/: README.md  convert_tjh.py  experiment.toml  experiment_external_fixed_split.toml  experiment_external_test.toml  label_fn.py  split_tjh.py
oneehr/: __init__.py  api.py  metrics.py
oneehr/agent/: __init__.py  cases.py  client.py  contracts.py  frameworks.py  instances.py  predict_eval.py  predict_schema.py  primitives.py  query.py  render.py  review_eval.py  review_schema.py  runtime.py  templates.py  validation.py  workspace.py
oneehr/analysis/: __init__.py  calibration.py  fairness.py  feature_importance.py  interpretability.py  missing_data.py  read.py  reporting.py  (+1 more)
tests/: support_runs.py  test_agent_cases.py  test_agent_runtime.py  test_all_models.py  test_analysis.py  test_analysis_modules.py  test_binned_schema.py  test_binning_categorical_strategy.py  test_calibration.py  test_cli_end_to_end_simulated.py  test_cli_smoke.py  test_config.py  test_datasets.py  test_eval_workflow.py  test_feature_display_names.py  test_feature_importance.py  test_inspect.py  test_labels_schema.py  test_llm.py  test_lr_model.py  test_medcode.py  test_metrics.py  test_new_models.py  test_overview_features.py  test_postprocess_pipeline.py  test_preprocessing_ops.py  test_review.py  test_run_manifest.py  test_runview.py  test_static_branches.py  test_static_dl_modes.py  test_static_patient_id_not_feature.py  test_static_postprocess.py  test_survival.py  test_tjh_adapter.py  test_tjh_converter.py  test_tjh_loader.py  test_train_cli_contract.py  test_webui.py  test_workspace.py
tutorials/: 01_quickstart.ipynb  02_custom_dataset.ipynb  03_model_comparison.ipynb  04_fairness_analysis.ipynb  05_survival_analysis.ipynb
webui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+227 files in other folders)
