[project]
name = "oneehr"
version = "0.1.0"
description = "An all-in-one EHR predictive modeling and analysis library in Python"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "OneEHR Contributors" }]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "scikit-learn>=1.3",
  "catboost>=1.2",
  # Pin SHAP to a Python 3.12-compatible stack (numba/llvmlite wheels).
  "shap==0.45.1",
  "torch>=2.10.0",
  "xgboost>=2.0",
]

[project.scripts]
oneehr = "oneehr.cli.main:main"

[tool.setuptools]
packages = ["oneehr"]
