[project]
name = "oneehr"
version = "0.1.0"
description = "Unified platform for longitudinal EHR experiments across ML, DL, and LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "MedX Lab @ PKU" }]
keywords = [
  "ehr",
  "electronic-health-records",
  "clinical-prediction",
  "machine-learning",
  "deep-learning",
  "llm",
  "benchmarking",
  "longitudinal",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "pyarrow>=14.0",
  "scikit-learn>=1.3",
  "catboost>=1.2",
  # Pin SHAP to a Python 3.12-compatible stack (numba/llvmlite wheels).
  "shap==0.45.1",
  "torch>=2.10.0",
  "xgboost>=2.0",
  "joblib>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "tqdm>=4.60",
  "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/MedXLab/OneEHR"
Documentation = "https://medxlab.github.io/OneEHR"
Repository = "https://github.com/MedXLab/OneEHR"
Issues = "https://github.com/MedXLab/OneEHR/issues"

[project.scripts]
oneehr = "oneehr.cli.main:main"

[project.optional-dependencies]
docs = ["mkdocs @ git+https://github.com/encode/mkdocs.git"]
test = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]
survival = ["lifelines>=0.29"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["oneehr*"]
